--- a/client/scss/_restaurants.scss
+++ b/client/scss/_restaurants.scss
@@ -1,6 +1,11 @@
+html, body{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
 body {
-  background-image: url("https://img.freepik.com/free-vector/pastel-ombre-background-pink-purple_53876-120750.jpg?w=2000");
-  // background-color: antiquewhite;
+  background-image: linear-gradient(to right bottom, rgb(206, 213, 248), rgb(255, 228, 253));
 }
 
 nav {
